// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params decorators should add parameter metadata to a class when decorated with @params 1`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "id",
      ],
      "handler": [Function],
      "type": "params",
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "cat",
      ],
      "handler": [Function],
      "type": "query",
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
      "type": "request",
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
      "type": "response",
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params 2`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "dog",
      ],
      "handler": [Function],
      "type": "body",
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params 3`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "Auth",
      ],
      "handler": [Function],
      "type": "headers",
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
      "type": "cookies",
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
      "type": "next",
    },
  ],
]
`;
